auth config added
