# controller/controller.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"fmt"
 	"log"
+	authconfig "opengate/controller/authConfig"
 	"opengate/controller/config"
 	"opengate/controller/gateway"
 	"opengate/controller/ping"
@@ -20,6 +21,7 @@ type Config struct {
 	Ping         ping.Config
 	Config       config.Config
 	Gateway      gateway.Config
+	AuthConfig   authconfig.Config
 }
 
 type Controller struct {
@@ -42,6 +44,7 @@ func (c *Controller) Listen(ctx context.Context) error {
 	swagger.NewSwaggerController(ctx).Register(router)
 	config.NewConfigController(ctx, &c.config.Config, c.srvFactory.GetConfigService()).Register(router)
 	gateway.NewGatewayController(ctx, &c.config.Gateway, c.srvFactory.GetGatewayService()).Register(router)
+	authconfig.NewAuthConfigController(ctx, &c.config.AuthConfig, c.srvFactory.GetAuthConfigService()).Register(router)
 
 	logger.Info(ctx, "swagger link: http://localhost:%d/opengate/swagger/index.html", c.config.Port)
 	log.Printf("HTTP server started listening on :%d", c.config.Port)
