# docs/swagger.json
@@ -4,6 +4,52 @@
         "contact": {}
     },
     "paths": {
+        "/opengate/authConfig": {
+            "put": {
+                "description": "Create or update service configuration based on the provided request.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AuthConfig"
+                ],
+                "summary": "Create or update service configuration.",
+                "parameters": [
+                    {
+                        "description": "Request body containing configuration details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateAuthConfigServiceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateAuthConfigResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.CustomError"
+                        }
+                    }
+                }
+            }
+        },
         "/opengate/config/": {
             "get": {
                 "description": "Retrieve a list of all service configurations.",
@@ -55,19 +101,12 @@
                 "summary": "Create or update service configuration.",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Ping ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Request body containing configuration details",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateServiceConfigRequest"
+                            "$ref": "#/definitions/dto.CreateConfigServiceRequest"
                         }
                     }
                 ],
@@ -75,7 +114,7 @@
                     "200": {
                         "description": "Successful response",
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateServiceConfigResponse"
+                            "$ref": "#/definitions/dto.CreateConfigServiceResponse"
                         }
                     },
                     "400": {
@@ -213,6 +252,21 @@
         }
     },
     "definitions": {
+        "dto.AuthConfigRequest": {
+            "type": "object",
+            "properties": {
+                "endpoint": {
+                    "type": "string"
+                },
+                "headers": {
+                    "description": "new",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "dto.ConfigByIdResponse": {
             "type": "object",
             "properties": {
@@ -224,21 +278,7 @@
                 }
             }
         },
-        "dto.CreateServiceConfigRequest": {
-            "type": "object",
-            "properties": {
-                "_id": {
-                    "type": "string"
-                },
-                "endpoint": {
-                    "type": "string"
-                },
-                "regex": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.CreateServiceConfigResponse": {
+        "dto.CreateAuthConfigResponse": {
             "type": "object",
             "properties": {
                 "_id": {
@@ -246,6 +286,67 @@
                 },
                 "statusCode": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.CreateAuthConfigServiceRequest": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "authConfig1": {
+                    "$ref": "#/definitions/dto.AuthConfigRequest"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateConfigServiceRequest": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "serviceConfig": {
+                    "$ref": "#/definitions/dto.CreateServiceConfigRequest"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateConfigServiceResponse": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.CreateServiceConfigRequest": {
+            "type": "object",
+            "properties": {
+                "authorization": {
+                    "description": "new",
+                    "type": "boolean"
+                },
+                "endpoint": {
+                    "type": "string"
+                },
+                "regex": {
+                    "type": "string"
+                },
+                "roles": {
+                    "description": "new",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -292,10 +393,10 @@
                 "createdOn": {
                     "type": "string"
                 },
-                "endpoint": {
-                    "type": "string"
+                "serviceConfig": {
+                    "$ref": "#/definitions/dto.CreateServiceConfigRequest"
                 },
-                "regex": {
+                "type": {
                     "type": "string"
                 },
                 "updatedOn": {
